--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,7 @@
 FROM golang:1.15.2-alpine3.12
 
+RUN go get -u github.com/gin-gonic/gin
+
 RUN mkdir -p /go/src/stock-portfolio-api
 
 WORKDIR /go/src/stock-portfolio-api
