--- a/DockerFile
+++ b/DockerFile
@@ -1,12 +1,14 @@
 FROM golang:1.15.2-alpine3.12
 
+RUN apk add git
+
+RUN go get -u github.com/gin-gonic/gin
+
 RUN mkdir -p /go/src/stock-portfolio-api
 
 WORKDIR /go/src/stock-portfolio-api
 
 COPY . /go/src/stock-portfolio-api
-
-RUN go get -u github.com/gin-gonic/gin
 
 RUN go install stock-portfolio-api
 
