--- a/DockerFile
+++ b/DockerFile
@@ -2,7 +2,7 @@ FROM golang:1.15.2-alpine3.12
 
 RUN apk add git
 
-RUN go get -u github.com/gin-gonic/gin
+RUN go get ./...
 
 RUN mkdir -p /go/src/stock-portfolio-api
 
