--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,5 @@ services:
       MYSQL_ROOT_PASSWORD: example
     ports:
     - "3306:3306"
+    volumes:
+    - ../db_setup.sql:/docker-entrypoint-initdb.d/setup.sql
