--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,11 @@ services:
     - "3306:3306"
     volumes:
     - ../db_setup.sql:/docker-entrypoint-initdb.d/setup.sql
-    healthcheck:
-        test: ["CMD", "curl", "-f", "http://localhost:3306"]
-        interval: 30s
-        timeout: 10s
-        retries: 5
     
   app:
     container_name: web_api
     hostname: web_api
-    restart: on-failure:3
+    restart: always
     build:
       context: .
       dockerfile: DockerFile
@@ -30,5 +25,4 @@ services:
     links:
       - "db:database"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
